--- a/admin.html
+++ b/admin.html
@@ -519,61 +519,4 @@
             loadManagementData();
         });
 
-        document.getElementById('manage-tab').addEventListener('click', async (e) => {
-            const target = e.target.closest('.action-btn');
-            if (!target) return;
-
-            const { id, type } = target.dataset;
-
-            if (target.classList.contains('delete-btn')) {
-                const endpoint = type === 'servers' ? `/api/servers/${id}` : `/api/options/flavors/${id}`;
-                if (confirm('Êtes-vous sûr de vouloir supprimer cet élément ?')) {
-                    await fetchWithAuth(`${API_BASE_URL}${endpoint}`, { method: 'DELETE' });
-                    loadManagementData();
-                }
-            } else if (target.classList.contains('edit-btn')) {
-                if (type === 'servers') {
-                    resetFlavorForm();
-                    manage.servers.idInput.value = id;
-                    manage.servers.nameInput.value = target.dataset.name;
-                    manage.servers.btn.textContent = 'Enregistrer les modifications';
-                    manage.servers.btn.classList.add('edit-mode');
-                    manage.servers.nameInput.focus();
-                } else if (type === 'flavors') {
-                    resetServerForm();
-                    manage.flavors.idInput.value = id;
-                    manage.flavors.textInput.value = target.dataset.text;
-                    manage.flavors.catInput.value = target.dataset.category;
-                    manage.flavors.btn.textContent = 'Enregistrer les modifications';
-                    manage.flavors.btn.classList.add('edit-mode');
-                    manage.flavors.textInput.focus();
-                }
-            }
-        });
-
-        // Logique pour la réinitialisation des données
-        resetDataBtn.addEventListener('click', () => {
-            confirmResetModal.classList.remove('hidden');
-        });
-
-        cancelResetBtn.addEventListener('click', () => {
-            confirmResetModal.classList.add('hidden');
-        });
-
-        confirmResetBtn.addEventListener('click', async () => {
-            try {
-                await fetchWithAuth(`${API_BASE_URL}/api/reset-data`, { method: 'POST' });
-                alert('Données réinitialisées avec succès.');
-                dataCache = {}; // Vider le cache
-                loadDataForTab('overview');
-                loadDataForTab('performance');
-            } catch (error) {
-                alert(`Erreur: ${error.message}`);
-            } finally {
-                confirmResetModal.classList.add('hidden');
-            }
-        });
-    });
-    </script>
-</body>
-</html>
+        documen
