--- a/admin.html
+++ b/admin.html
@@ -130,7 +130,7 @@
 
     <div class="main-container hidden" id="main-content">
         <header class="header">
-            <a href="#" class="logo-link">
+            <a href="index.html" class="logo-link">
                 <img src="/assets/logosiena-1.png" alt="Logo Siena Paris">
             </a>
             <h1>Tableau de Bord Siena</h1>
@@ -227,13 +227,10 @@
                             <input type="text" id="new-flavor-text" placeholder="Nom du plat" required>
                             <select id="new-flavor-category" required>
                                 <option value="" disabled selected>Choisir une catégorie</option>
-                                <option value="Antipasti">Antipasti</option>
-                                <option value="Crudo">Crudo</option>
-                                <option value="Insalate">Insalate</option>
+                                <option value="Antipasti & Crudo">Antipasti & Crudo</option>
                                 <option value="Pâtes">Pâtes</option>
+                                <option value="Viandes & Poissons">Viandes & Poissons</option>
                                 <option value="Pizze">Pizze</option>
-                                <option value="Viandes">Viandes</option>
-                                <option value="Poissons">Poissons</option>
                                 <option value="Douceurs">Douceurs</option>
                             </select>
                             <button type="submit">Ajouter Plat</button>
